# prensadaodevagas

./: .gitignore  Makefile  README.md  pyproject.toml
ohmyscrapper/: config.yaml  url_sniffing.yaml  url_types.yaml
ohmyscrapper_prompts/: prompt.md
templates/: about.html  data.js  pessoas.html  template.html
templates/css/: style.css
templates/js/: script.js
tools/: 00_chat-slicer.py  01_date-updater.py  02_archive.py  03_render.py  chat-slicer.py  linkedin-decoder.py
