[project]
name = "prensadaodevagas-com-br"
version = "0.1.0"
description = "Este é o repositório ajuda na geração do site prensadaodevagas.com.br"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ohmyscrapper",
    "pandas>=3.0.0",
    "unforgettable>=0.1.1",
    "urlextract>=1.9.0",
    "urlicon",
]
